# devspace-example-python

./: .gitignore  README.md
01-simple/: Dockerfile  README.md  devspace.yaml  requirements.txt
01-simple/manifests/: deployment.yaml
02-fastapi-tortoise/: .gitignore  README.md  devspace.yaml
02-fastapi-tortoise/backend/: Dockerfile  pyproject.toml  start-or-restart-uvicorn.sh
02-fastapi-tortoise/backend/devspace_starwars_api/: __init__.py  dependencies.py  main.py
02-fastapi-tortoise/backend/devspace_starwars_api/db/: __init__.py  models.py
02-fastapi-tortoise/backend/devspace_starwars_api/routes/: __init__.py  planets.py
02-fastapi-tortoise/database/: init.sh
02-fastapi-tortoise/manifests/: deployment.yaml  svc.yaml
03-debugging/: .gitignore  Dockerfile  Dockerfile.dev  README.md  devspace.yaml  devspace_start.sh  requirements.txt  setup.py
03-debugging/client/: main.py
hello-devspace/: .gitignore  Makefile  README.md  devspace.yaml  requirements.txt
hello-devspace/app/: __init__.py  main.py
simple-project/: Makefile  README.md
simple-project/backend/devspace_starwars_api/routes/: people.py
simple-project/database/: Dockerfile  seed.sql
simple-project/manifests/: ingress.yaml
